--- a/assets/style.css
+++ b/assets/style.css
@@ -28,13 +28,14 @@ body{
 }
 
 .quiz h2 {
-    font-size: 18px;
+    font-size: 20px;
     color: rgb(73, 50, 205);
     padding-bottom: 10px;
 }
 
 .btn {
     background-color: #fff;
+    font-size: medium;
     color: #000;
     width: 100%;
     border: 1px solid #000;
@@ -52,8 +53,10 @@ body{
 }
 
 #continue {
-    background-color: #fff;
-    color: #000;
+    background-color: #000;
+    border-color: ;
+    font-size: 18px;
+    color: #fff;
     width: 150px;
     border: 0;
     padding: 10px;
@@ -65,6 +68,14 @@ body{
 }
 
 #continue:hover {
-    background-color: #222;
-    color: white;
+    background-color: #fff;
+    color: #000;
+}
+
+.correct{
+    background: rgb(55, 177, 55);
+}
+
+.incorrect {
+    background: rgb(255, 101, 101);
 }
